# whu_software_security_exp

./: CMakeLists.txt  README.md  client.cpp  client.py  send.py  server.py  server_tcp.py
scrcpy/: srcpy_client.py  srcpy_srv.py
scrcpy/templates/: index.html
templates/: index.html
